<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="3">

                <RelativeLayout
                    android:id="@+id/name_sort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="12"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/name_sort_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_sort_asc"
                        tools:ignore="VectorDrawableCompat" />
                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/cls_qty_sort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="8"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/Closing_qty"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/cls_qty_sort_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_sort_asc"
                        tools:ignore="VectorDrawableCompat" />
                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/cls_val_sort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="8"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/Closing_value"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/cls_val_sort_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_sort_asc"
                        tools:ignore="VectorDrawableCompat" />
                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/open_qty_sort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="8"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/opening_qnty"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/open_qty_sort_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_sort_asc"
                        tools:ignore="VectorDrawableCompat" />
                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/open_val_sort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="8"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/opening_value"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/open_val_sort_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_sort_asc"
                        tools:ignore="VectorDrawableCompat" />
                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/pur_qty_sort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/purchase_qnty"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/pur_qty_sort_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_sort_asc"
                        tools:ignore="VectorDrawableCompat" />
                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/pur_val_sort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="8"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/purchase_value"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/pur_val_sort_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_sort_asc"
                        tools:ignore="VectorDrawableCompat" />
                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/sales_qty_sort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="8"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/sales_qty"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/sal_qty_sort_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_sort_asc"
                        tools:ignore="VectorDrawableCompat" />
                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/sales_val_sort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="8"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/sales_value"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/sal_val_sort_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_sort_asc"
                        tools:ignore="VectorDrawableCompat" />
                </RelativeLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/stock_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>